Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-43010

Kv uses ids instead of names when reporting collection metrics to prometheus

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 7.0.0
    • Cheshire-Cat
    • couchbase-bucket
    • None

    Description

      Kv uses ids in collection and scope labels instead of their names when reporting collection metrics to prometheus:

       
      kv_items\{collection="0x0",bucket="test",scope="0x0"} 0.000000
      kv_items\{collection="0x8",bucket="test",scope="0x0"} 1.000000
      
      

      First of all, it's inconsistent with buckets.

      Other infrastructure (such as ns_server's API's) also assumes to see names as collection and scope label values.

      In future we might want to add id's as a separate labels in order to deal with bucket/scope/collection deletion, but strategy for this use-case is not defined yet. Right now we need names in collection metrics for MVP. 

      Attachments

        Issue Links

          For Gerrit Dashboard: MB-43010
          # Subject Branch Project Status CR V

          Activity

            People

              timofey.barmin Timofey Barmin
              timofey.barmin Timofey Barmin
              Votes:
              0 Vote for this issue
              Watchers:
              8 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes

                  PagerDuty