MB-43010: Provide scope and collection names to Prometheus

Previously, scope and collection IDs were provided to Prometheus as
labels:

kv_stat_name{collection="0x0", scope="0x9"}

ns_server relies upon these labels instead containing the scope and
collection name. Change to support this, with stats now having the
following labels, for an example collection foobar.bazqux:

kv_stat_name{collection="foobar",
             collection_id="0x0",
             scope="bazqux",
             scope_id="0x9"}

Change-Id: I3ce017dc792a2b860749e65d55c318b11caa427c
Reviewed-on: http://review.couchbase.org/c/kv_engine/+/141380
Tested-by: Build Bot <build@couchbase.com>
Reviewed-by: Dave Rigby <daver@couchbase.com>